# Auth-Service

./: README.md
auth_FastAPI/: config.py  for me.txt  main.py  middleware_auth.py  requirements.txt  routes_8000.py  test_app.py
auth_FastAPI/Maria/: Dockerfile  app.py  auth_server.py  docker-compose.yml  main.py  models.py  pyproject.toml  redisbase.py  show_db.py  test_api.py  test_requests.py
auth_FastAPI/database/: fake_db.py
auth_FastAPI/dependencies/: auth_depends.py
auth_FastAPI/models/: user.py
auth_FastAPI/routers/: routes_8001.py
auth_FastAPI/services/: user_service.py
