[tool.poetry]
name = "auth-server"
version = "0.1.0"
description = "FastAPI Authentication Server"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.115.11"
uvicorn = "0.34.0"
redis = "5.0.1"
passlib = "1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
email-validator = "2.2.0"
pydantic = "2.10.6"
starlette = "0.46.0"
jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 